// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filtering the menu 1`] = `
"<div id=\\"drill\\">
  <div class=\\"noedge\\">
    <ul class=\\"noborder\\">
      <li class=\\"value\\" id=\\"Demographics\\"><span><a class=\\"value-link\\">Demographics  <sup>(1787)</sup><img class=\\"right-caret transform-up\\" src=\\"/images/right-caret-light.png\\"></a></span>
        <ul class=\\"noborder\\">
          <li class=\\"value\\" id=\\"Population\\"><span><a class=\\"value-link\\">Population  <sup>(1)</sup><button class=\\"checkbox checked\\"></button></a></span></li>
        </ul>
      </li>
    </ul>
  </div>
</div>"
`;

exports[`filtering the menu 2`] = `
"<div id=\\"drill\\">
  <div class=\\"noedge\\"></div>
</div>"
`;

exports[`filtering the menu 3`] = `
"<div id=\\"drill\\">
  <div class=\\"noedge\\">
    <ul class=\\"noborder\\">
      <li class=\\"value\\" id=\\"Demographics\\"><span><a class=\\"value-link\\">Demographics  <sup>(1787)</sup><img class=\\"right-caret transform-up\\" src=\\"/images/right-caret-light.png\\"></a></span>
        <ul class=\\"noborder\\">
          <li class=\\"value\\" id=\\"Median age\\"><span><a class=\\"value-link\\">Median age  <sup>(1)</sup><button class=\\"checkbox\\"></button></a></span></li>
        </ul>
      </li>
    </ul>
  </div>
</div>"
`;
